--- a/style.css
+++ b/style.css
@@ -1,16 +1,25 @@
 body {
-    background-color: #f8f9fa;
-  }
-  .quiz-container {
-    max-width: 800px;
-    margin: auto;
-  }
-  .question {
-    margin-bottom: 20px;
-  }
+  background-image: url("circle-scatter-haikei.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: aliceblue;
+}
+.quiz-container {
+  max-width: 800px;
+  margin: auto;
+}
+.question {
+  margin-bottom: 20px;
+}
 
-  img {
-    width: 50%;
-    /* height: 500px; */
-    object-fit: cover;
-  }
+img {
+  width: 50%;
+  object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
